tests/negative/gold/block5_test.gold
tests/negative/block5_test.toit:7:6: error: Unexpected block
    (: print it) : "foo"
     ^~~~~~~~~~
tests/negative/block5_test.toit:7:5: error: Map keys may not be blocks
    (: print it) : "foo"
    ^
Compilation failed.
